changes styling of skill_slide for min_width_1400px.scss

--- a/src/STYLES/_min_width_1400px.scss
+++ b/src/STYLES/_min_width_1400px.scss
@@ -70,6 +70,14 @@
         }
     }
 
+    .skill-slide{
+        .front-end, .back-end{
+            img{
+                height: 130px;
+            }
+        }
+    }
+
     iframe{
         height: 350px;
     }
