changes styling of bio-img-container img and text-container for different screen sizes

--- a/src/STYLES/_min_width_5000px.scss
+++ b/src/STYLES/_min_width_5000px.scss
@@ -199,10 +199,8 @@
     }
 
     .bio {
-        .bio-img-container {
-            img{
-                margin-top: 200px;
-            }
+        .text-container{
+            line-height: normal;
         }
         .text{
             font-size: 70px;
