--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -26,10 +26,13 @@
 }
 
 .bio, .project-div{
+    position: absolute;
+}
+
+.bio{
     display: flex;
     justify-content: space-between;
     padding: 30px;
-    position: absolute;
 }
 
 .resume {
@@ -85,44 +88,49 @@
 }
 
 .project-div{
-    display: block;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 10px;
     .video-container{
         width: 50%;
+        height: 40%;
         margin: 0 auto;
         iframe{
             width: 100%;
+            height: 100%;
         }
     }
     .text-container{
         width: 100%;
+        height: 100%;
         text-align: center;
         .text{
-            padding: 5px 10px;
             width: auto;
-        }
-        h2, h3{
-            margin: 10px auto;
-        }
-        ul{
-            list-style: square;
         }
         .link-ul{
             padding: 10px;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
         }
         .list-style {
             padding-inline-start: 20px;
-            li{
-                list-style: circle;
-            }
         }
 
     }
+
+    .codepen-h3{
+        margin: 0 auto;
+        height: 10%;
+    }
+
     .codepen{
         display: flex;
         flex-wrap: wrap;
-        padding-left: 30px;
+        justify-content:center;
+        height: 80%;
+        margin: 0 30px 0 30px;
         img{
             width: 100%;
             height:100%;
@@ -131,9 +139,9 @@
         }
         .codepen-div{
             width: 30%;
-            height:250px;
-            margin-right: 20px;
-            margin-top: 30px;
+            height:40%;
+            margin-right: 5px;
+            margin-top: 10px;
             &:hover img{
                 opacity: 0.3;
                 backface-visibility: hidden;
