--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -13,9 +13,6 @@
   background: rgba(248, 248, 248, 0.5);
   border: 1px solid transparent;
   top: 20px;
-  left: 600px;
-  width: 100px;
-  height: 50px;
   border-radius: 90px;
   font-weight: bold;
   padding: 10px;
@@ -44,7 +41,6 @@
 }
 
 .css-art p {
-  font-size: 23px;
   font-family: 'Indie Flower', cursive;
   position: relative;
   color: black;
@@ -91,7 +87,6 @@
   height: 20px;
   background: #A26877;
   position: absolute;
-  left: 550px;
   top: 170px;
   -webkit-box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
           box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
@@ -220,7 +215,6 @@
   height: 150px;
   position: absolute;
   top: 340px;
-  left: 310px;
   z-index: -1;
   border-radius: 15px 15px 0 0;
   background: #1f1e1f;
@@ -229,7 +223,6 @@
 .girl {
   position: absolute;
   top: 140px;
-  left: 330px;
 }
 
 .girl .hair {
@@ -523,7 +516,6 @@
   padding-top: 10px;
   background: #BFC0C0;
   position: absolute;
-  left: 330px;
   top: 370px;
   -webkit-box-shadow: inset 10px 0 50px #464046, inset -60px 0 120px #999c9c;
           box-shadow: inset 10px 0 50px #464046, inset -60px 0 120px #999c9c;
@@ -545,7 +537,6 @@
   height: 55px;
   background: rgba(60, 43, 144, 0.1);
   position: absolute;
-  left: 530px;
   top: 415px;
   border-radius: 0 0 10px 10px;
   border-width: 0 2px 2px 2px;
@@ -643,7 +634,6 @@
 
 .plant-div {
   position: absolute;
-  left: 150px;
   top: 385px;
 }
 
@@ -734,7 +724,6 @@
   height: 230px;
   position: absolute;
   top: 505px;
-  left: 150px;
   background-color: #d4bf82;
   background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
   -webkit-box-shadow: 5px 14px 12px -3px rgba(0, 0, 0, 0.6);
@@ -767,7 +756,6 @@
   height: 130px;
   background: #393e41;
   position: absolute;
-  left: 40px;
   top: 550px;
   border-radius: 5px 5px 20px 20px;
   -webkit-box-shadow: -3px 4px 14px -3px rgba(0, 0, 0, 0.75);
@@ -788,7 +776,6 @@
 
 .dog {
   position: absolute;
-  left: 620px;
   top: 600px;
 }
 
@@ -1057,7 +1044,6 @@
 
 .coffee {
   position: absolute;
-  left: 250px;
   top: 422px;
 }
 
@@ -1118,8 +1104,6 @@
 
 .postits {
   position: absolute;
-  top: 0px;
-  left: 10px;
 }
 
 .postits .post-it-1, .postits .post-it-2, .postits .post-it-3, .postits .post-it-4 {
@@ -1678,7 +1662,6 @@
 .window {
   position: absolute;
   top: 150px;
-  left: 1400px;
   width: 300px;
   height: 300px;
   border: 10px solid white;
@@ -2091,6 +2074,10 @@
 }
 
 .bio, .project-div {
+  position: absolute;
+}
+
+.bio {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2098,7 +2085,6 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 30px;
-  position: absolute;
 }
 
 .resume {
@@ -2158,34 +2144,35 @@
 }
 
 .project-div {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 10px;
 }
 
 .project-div .video-container {
   width: 50%;
+  height: 40%;
   margin: 0 auto;
 }
 
 .project-div .video-container iframe {
   width: 100%;
+  height: 100%;
 }
 
 .project-div .text-container {
   width: 100%;
+  height: 100%;
   text-align: center;
 }
 
 .project-div .text-container .text {
-  padding: 5px 10px;
   width: auto;
-}
-
-.project-div .text-container h2, .project-div .text-container h3 {
-  margin: 10px auto;
-}
-
-.project-div .text-container ul {
-  list-style: square;
 }
 
 .project-div .text-container .link-ul {
@@ -2193,9 +2180,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .project-div .text-container .list-style {
@@ -2203,8 +2189,9 @@
           padding-inline-start: 20px;
 }
 
-.project-div .text-container .list-style li {
-  list-style: circle;
+.project-div .codepen-h3 {
+  margin: 0 auto;
+  height: 10%;
 }
 
 .project-div .codepen {
@@ -2213,7 +2200,11 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-left: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 80%;
+  margin: 0 30px 0 30px;
 }
 
 .project-div .codepen img {
@@ -2225,9 +2216,9 @@
 
 .project-div .codepen .codepen-div {
   width: 30%;
-  height: 250px;
-  margin-right: 20px;
-  margin-top: 30px;
+  height: 40%;
+  margin-right: 5px;
+  margin-top: 10px;
 }
 
 .project-div .codepen .codepen-div:hover img {
@@ -2465,21 +2456,9 @@
     top: 10px;
     left: 850px;
   }
-  .project-div {
-    padding: 40px 5em;
-  }
-  .project-div .codepen {
-    padding-top: 30px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 300px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -170px;
     left: 60px;
-  }
-  .project-div .text-container {
-    line-height: 35px;
   }
   .skill-slide .front-end {
     padding: 80px 20px;
@@ -2636,15 +2615,9 @@
     width: 950px !important;
     height: 600px !important;
   }
-  .project-div .codepen .codepen-div {
-    height: 200px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -130px;
     left: 70px;
-  }
-  .project-div .text-container {
-    line-height: 20px;
   }
   .skill-slide .front-end {
     padding-top: 50px;
@@ -2660,9 +2633,6 @@
   }
   .x {
     left: 900px;
-  }
-  iframe {
-    height: 200px;
   }
 }
 
@@ -2683,21 +2653,8 @@
     width: 1000px !important;
     height: 550px !important;
   }
-  .project-div {
-    padding: 20px 4em;
-  }
-  .project-div .text-container {
-    line-height: 15px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 200px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     left: 80px;
-  }
-  iframe {
-    height: 200px;
-    width: 300px;
   }
   .x {
     left: 950px;
@@ -2786,16 +2743,9 @@
     width: 850px !important;
     height: 630px !important;
   }
-  .project-div .codepen .codepen-div {
-    width: 28%;
-    height: 250px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     left: 50px;
     top: -150px;
-  }
-  .project-div .text-container {
-    line-height: 25px;
   }
   .x {
     left: 800px;
@@ -2840,9 +2790,6 @@
     left: 80px;
     height: 560px !important;
     width: 1000px !important;
-  }
-  .project-div .text-container {
-    line-height: 20px;
   }
   .project-div .codepen .codepen-div .middle-spot {
     left: 70px;
@@ -2896,12 +2843,6 @@
     width: 930px !important;
     height: 750px !important;
   }
-  .project-div .text-container {
-    line-height: 25px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 260px;
-  }
   .skill-slide .front-end {
     margin-top: 30px;
   }
@@ -2913,9 +2854,6 @@
   }
   .x {
     left: 880px;
-  }
-  iframe {
-    height: 300px;
   }
 }
 
@@ -2959,25 +2897,12 @@
     top: 800px;
     left: 50px;
   }
-  .project-div .codepen {
-    padding-left: 50px;
-  }
-  .project-div .codepen .codepen-div {
-    width: 30%;
-    height: 400px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     left: 100px;
     top: -210px;
   }
-  .project-div .text-container {
-    line-height: 40px;
-  }
   .skill-slide .front-end img, .skill-slide .back-end img {
     height: 200px;
-  }
-  iframe {
-    height: 450px;
   }
   .x {
     left: 1050px;
@@ -3026,16 +2951,9 @@
   .bio {
     padding: 10px;
   }
-  .project-div .codepen .codepen-div {
-    width: 29%;
-    height: 200px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     left: 70px;
     top: -130px;
-  }
-  .project-div .text-container {
-    line-height: 20px;
   }
   .middle-spot {
     top: -180px;
@@ -3046,9 +2964,6 @@
   }
   .skill-slide .front-end img, .skill-slide .back-end img {
     height: 100px;
-  }
-  iframe {
-    height: 200px;
   }
   .x {
     left: 950px;
@@ -3127,21 +3042,11 @@
     left: 100px;
     height: 750px !important;
   }
-  .project-div .codepen {
-    padding-left: 50px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 250px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -160px;
   }
   .skill-slide .front-end img, .skill-slide .back-end img {
     height: 150px;
-  }
-  .text-container {
-    padding-top: 100px;
-    line-height: 40px;
   }
 }
 
@@ -3187,17 +3092,11 @@
     left: 50px;
     width: 1200px !important;
   }
-  .project-div .codepen .codepen-div {
-    width: 30%;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     left: 110px;
   }
   .x {
     left: 1150px;
-  }
-  iframe {
-    height: 300px;
   }
 }
 
@@ -3216,9 +3115,6 @@
   .awssld, .bio-card, .contact-card {
     top: 890px;
     left: 70px;
-  }
-  .project-div .codepen {
-    padding-left: 80px;
   }
 }
 
@@ -3262,21 +3158,12 @@
     height: 1000px !important;
     left: 100px;
   }
-  .project-div .codepen {
-    padding-left: 100px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 370px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -210px;
     left: 100px;
   }
   .skill-slide .front-end img, .skill-slide .back-end img {
     height: 220px;
-  }
-  iframe {
-    height: 500px;
   }
   .x {
     left: 1150px;
@@ -3287,7 +3174,7 @@
 @media only screen and (min-width: 1400px) {
   .light-buttons .light-off {
     width: 1450px;
-    height: 1800px;
+    height: 1600px;
   }
   .floor {
     width: 1450px;
@@ -3328,20 +3215,11 @@
     top: 850px;
     height: 700px !important;
   }
-  .project-div {
-    padding-top: 3em;
-  }
-  .project-div .codepen .codepen-div {
-    height: 300px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -180px;
   }
   .skill-slide .front-end img, .skill-slide .back-end img {
     height: 130px;
-  }
-  iframe {
-    height: 350px;
   }
 }
 
@@ -3392,12 +3270,6 @@
     left: 300px;
     width: 1210px !important;
     height: 900px !important;
-  }
-  .contact-div {
-    padding: 350px  100px;
-  }
-  iframe {
-    height: 400px;
   }
 }
 
@@ -3880,16 +3752,6 @@
   .text {
     font-size: 40px;
   }
-  .project-div {
-    padding-top: 5em;
-  }
-  .project-div .text-container {
-    padding-top: 30px;
-    line-height: 50px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 550px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -310px;
     left: 160px;
@@ -4115,9 +3977,6 @@
   .text {
     font-size: 40px;
   }
-  .project-div .codepen {
-    padding-left: 140px;
-  }
   .project-div .codepen .codepen-div .middle-spot {
     top: -300px;
     left: 125px;
@@ -4126,13 +3985,6 @@
     font-size: 40px;
     vertical-align: middle;
     line-height: 80px;
-  }
-  .project-div .text-container {
-    padding-top: 50px;
-    line-height: 50px;
-  }
-  iframe {
-    height: 35vh;
   }
 }
 
@@ -4324,19 +4176,6 @@
   }
   .text {
     font-size: 60px;
-  }
-  .project-div {
-    padding-top: 10em;
-  }
-  .project-div .text-container {
-    padding-top: 200px;
-    line-height: 70px;
-  }
-  .project-div .codepen {
-    padding-left: 400px;
-  }
-  .project-div .codepen .codepen-div {
-    height: 950px;
   }
   .project-div .codepen .codepen-div .middle-spot {
     top: -500px;
