--- a/src/STYLES/_min_width_2500px.scss
+++ b/src/STYLES/_min_width_2500px.scss
@@ -520,16 +520,15 @@
     }
 
     .project-div{
+        .codepen-h3{
+            font-size:4rem;
+        }
         .codepen{
             .codepen-div{
-                .middle-spot{
-                    top: -310px;
-                    left: 160px;
-                    width: 250px;
-                    height: 100px;
-                    font-size: 40px;
-                    vertical-align: middle;
-                    line-height: 80px;
+                .middle-spot-div{
+                    .middle-spot a{
+                        font-size:3rem;
+                    }
                 }
             }
         }
