--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -88,7 +88,6 @@
 }
 
 .project-div{
-    display: flex;
     height: 100%;
     width: 100%;
     flex-wrap: wrap;
@@ -123,6 +122,7 @@
     .codepen-h3{
         margin: 0 auto;
         height: 10%;
+        font-size:3rem;
     }
 
     .codepen{
@@ -143,29 +143,41 @@
             margin-right: 5px;
             margin-top: 10px;
             &:hover img{
-                opacity: 0.3;
+                opacity: 0.4;
                 backface-visibility: hidden;
                 transition: .5s ease-in-out;
             }
             &:hover .middle-spot{
-                opacity: 1;
+                opacity: 0.3;
+                z-index: 2;
             }
-            .middle-spot {
-                position: relative;
-                top: -165px;
-                left: 110px;
-                opacity: 0;
-                width: 100px;
-                height: auto;
-                background: white;
-                padding: 10px;
-                border-radius: 15px;
-                transition: .5s ease-in-out;
+            .img-div{
+                position: absolute;
+                width: 27%;
+                height: 31%;
+            }
+            .middle-spot-div{
+                height: 100%;
+                width: 100%;
+                display: flex;
+                .middle-spot {
+                    transition: .5s ease-in-out;
+                    display: flex;
+                    margin: auto;
+                    opacity: 1;
+                } 
             }
             a{
+                font-size: large;
+                padding: 10px;
+                background: rgba(248,248,248, 1);
+                border-radius: 15px;
                 display: inline-block;
                 text-decoration: none;
                 color: black;
+                margin: auto;
+                height: auto;
+                margin: auto;
             }
         }
     }
