--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -147,9 +147,9 @@
                 backface-visibility: hidden;
                 transition: .5s ease-in-out;
             }
-            &:hover .middle-spot{
-                opacity: 0.3;
-                z-index: 2;
+            &:hover .middle-spot a{
+                opacity: 1;
+                z-index: 1;
             }
             .img-div{
                 position: absolute;
@@ -164,10 +164,10 @@
                     transition: .5s ease-in-out;
                     display: flex;
                     margin: auto;
-                    opacity: 1;
                 } 
             }
             a{
+                opacity: 0;
                 font-size: large;
                 padding: 10px;
                 background: rgba(248,248,248, 1);
