--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -2,7 +2,7 @@
 @media  only screen and (min-width: 1280px){
     .light-buttons{
         .light-off{
-            width: 1300px;
+            width: 100%;
         }
     }
 
