adds styling for mdl-button for different screen sizes

--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -5,6 +5,11 @@
             height: 1600px;
         }
     }
+
+    .mdl-button{
+        display: none;
+    }
+
     .postits{
         left: -170px;
         top:700px;
