--- a/src/STYLES/_min_width_1024px.scss
+++ b/src/STYLES/_min_width_1024px.scss
@@ -12,6 +12,12 @@
         height: 250px;
     }
 
+    .mdl-button{
+        display: block;
+        left: 390px;
+        top: 580px;
+    }
+
     .postits{
         top: 800px;
         left: -165px;
