--- a/src/STYLES/_min_width_1900px.scss
+++ b/src/STYLES/_min_width_1900px.scss
@@ -18,6 +18,10 @@
         height: 510px;
     }
 
+    .mdl-button{
+        display: none;
+    }
+
     .postits{
         top: -20px;
         left: 600px;
