--- a/src/STYLES/_min_width_280px.scss
+++ b/src/STYLES/_min_width_280px.scss
@@ -33,6 +33,10 @@
         left: 0;
     }
 
+    .mdl-button{
+        display: none;
+    }
+
     .postits{
         left: -470px;
         top:700px;
