--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -7,6 +7,16 @@
         }
     }
 
+    .mdl-button{
+        display: block;
+        left: 850px;
+        top: 500px;
+        width: 30%;
+        img{
+            width: 100%;
+        }
+    }
+
     .postits{
       left: -350px;
       top:750px;
