--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -6,6 +6,13 @@
             height: 1370px;
         }
     }
+
+    .mdl-button{
+        top: 420px;
+        img{
+            width: 100%;
+        }
+    }
     .postits{
         left:-50px;
         top:700px;
