--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -14,6 +14,12 @@
         width: 100%;
     }
 
+    .mdl-button{
+        display: block;
+        left: 350px;
+        top: 550px;
+    }
+
     .postits{
         left: -100px;
     }
