--- a/src/STYLES/_min_width_1366px.scss
+++ b/src/STYLES/_min_width_1366px.scss
@@ -10,6 +10,10 @@
         height: 405px;
     }
 
+    .mdl-button{
+        top: 700px;
+    }
+
     .postits{
         left: -170px;
         top:950px;
