--- a/src/STYLES/_min_width_760px.scss
+++ b/src/STYLES/_min_width_760px.scss
@@ -15,6 +15,10 @@
         left: 460px;
     }
 
+    .mdl-button{
+        display: none;
+    }
+
     .postits{
         left: -170px;
         top:700px;
