--- a/src/STYLES/_min_width_812px.scss
+++ b/src/STYLES/_min_width_812px.scss
@@ -7,6 +7,13 @@
             height: 1400px;
         }
     }
+
+    .mdl-button{
+        display: block;
+        left: 850px;
+        top: 410px;
+    }
+
     .postits{
         left:-20px;
         top:720px;
