--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -127,15 +127,26 @@
 
     .codepen{
         display: flex;
-        flex-wrap: wrap;
-        justify-content:center;
-        height: 80%;
+        height:80%;
+        width: auto;
         margin: 0 30px 0 30px;
-        img{
-            width: 100%;
-            height:100%;
-            opacity: 1;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+        }
+        &::-webkit-scrollbar-thumb {
+            width: 50px;
             border-radius: 40px;
+            background-color: rgba(0,0,0,.5);
+            box-shadow: 0 0 1px rgba(255,255,255,.5);
+            -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            background: white;
+            border-radius: 10px;
         }
         .codepen-div{
             width: 30%;
