--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -149,11 +149,14 @@
             border-radius: 10px;
         }
         .codepen-div{
-            width: 30%;
-            height:40%;
-            margin-right: 5px;
-            margin-top: 10px;
-            &:hover img{
+            position: relative;
+            overflow: scroll;
+            width: 100%;
+            height:100%;
+            margin-right: 15px;
+            flex: 0 0 100%;
+            scroll-snap-align: center;
+            &:hover .img-div img{
                 opacity: 0.4;
                 backface-visibility: hidden;
                 transition: .5s ease-in-out;
