--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -166,9 +166,14 @@
                 z-index: 1;
             }
             .img-div{
-                position: absolute;
-                width: 27%;
-                height: 31%;
+                width: 100%;
+                height: 100%;
+                img{
+                    width: 100%;
+                    height:100%;
+                    opacity: 1;
+                    border-radius: 40px;
+                }
             }
             .middle-spot-div{
                 height: 100%;
