changes styling of middle_spot_div for react_awesome_slider.scss

--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -176,6 +176,8 @@
                 }
             }
             .middle-spot-div{
+                position: absolute;
+                top: 0;
                 height: 100%;
                 width: 100%;
                 display: flex;
@@ -196,7 +198,6 @@
                 color: black;
                 margin: auto;
                 height: auto;
-                margin: auto;
             }
         }
     }
