--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -131,6 +131,7 @@
         width: auto;
         margin: 0 30px 0 30px;
         overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
         scroll-snap-type: x mandatory;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
