scss updates css

--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2200,6 +2200,7 @@
   width: auto;
   margin: 0 30px 0 30px;
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
 }
