changes styling of mdl-button for different screen sizes

--- a/src/STYLES/_min_width_1024px.scss
+++ b/src/STYLES/_min_width_1024px.scss
@@ -14,8 +14,15 @@
 
     .mdl-button{
         display: block;
-        left: 390px;
-        top: 580px;
+    }
+
+    @keyframes arrow-up-and-down {
+        from {
+          top: 500px
+        }
+        to {
+          top: 550px;
+        }
     }
 
     .postits{
