--- a/src/STYLES/_min_width_812px.scss
+++ b/src/STYLES/_min_width_812px.scss
@@ -11,7 +11,15 @@
     .mdl-button{
         display: block;
         left: 850px;
-        top: 410px;
+    }
+
+    @keyframes arrow-up-and-down {
+        from {
+          top: 420px
+        }
+        to {
+          top: 460px;
+        }
     }
 
     .postits{
