--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -127,17 +127,19 @@
 
     .codepen{
         display: flex;
+        flex-wrap: wrap;
         height:80%;
         width: auto;
         margin: 0 30px 0 30px;
-        overflow-x: scroll;
+        overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
-        scroll-snap-type: x mandatory;
+        scroll-snap-type: y mandatory;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
         }
         &::-webkit-scrollbar-thumb {
             width: 50px;
+            height: 50px;
             border-radius: 40px;
             background-color: rgba(0,0,0,.5);
             box-shadow: 0 0 1px rgba(255,255,255,.5);
@@ -154,8 +156,8 @@
             overflow: scroll;
             width: 100%;
             height:100%;
-            margin-right: 15px;
-            flex: 0 0 100%;
+            margin-bottom: 15px;
+            // flex: 0 0 100%;
             scroll-snap-align: center;
             &:hover .img-div img{
                 opacity: 0.4;
