--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2196,13 +2196,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   height: 80%;
   width: auto;
   margin: 0 30px 0 30px;
-  overflow-x: scroll;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  -ms-scroll-snap-type: x mandatory;
-      scroll-snap-type: x mandatory;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
 }
 
 .project-div .codepen::-webkit-scrollbar {
@@ -2211,6 +2213,7 @@
 
 .project-div .codepen::-webkit-scrollbar-thumb {
   width: 50px;
+  height: 50px;
   border-radius: 40px;
   background-color: rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
@@ -2229,10 +2232,7 @@
   overflow: scroll;
   width: 100%;
   height: 100%;
-  margin-right: 15px;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
+  margin-bottom: 15px;
   scroll-snap-align: center;
 }
 
