--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2809,9 +2809,6 @@
   .light-buttons .light-off {
     height: 1370px;
   }
-  .mdl-button {
-    top: 420px;
-  }
   .mdl-button img {
     width: 50%;
   }
@@ -2976,7 +2973,22 @@
   .mdl-button {
     display: block;
     left: 850px;
-    top: 410px;
+  }
+  @-webkit-keyframes arrow-up-and-down {
+    from {
+      top: 420px;
+    }
+    to {
+      top: 460px;
+    }
+  }
+  @keyframes arrow-up-and-down {
+    from {
+      top: 420px;
+    }
+    to {
+      top: 460px;
+    }
   }
   .postits {
     left: -20px;
@@ -3120,8 +3132,22 @@
   }
   .mdl-button {
     display: block;
-    left: 390px;
-    top: 580px;
+  }
+  @-webkit-keyframes arrow-up-and-down {
+    from {
+      top: 500px;
+    }
+    to {
+      top: 550px;
+    }
+  }
+  @keyframes arrow-up-and-down {
+    from {
+      top: 500px;
+    }
+    to {
+      top: 550px;
+    }
   }
   .postits {
     top: 800px;
@@ -3146,8 +3172,23 @@
   }
   .mdl-button {
     display: block;
-    left: 350px;
-    top: 550px;
+    width: 25%;
+  }
+  @-webkit-keyframes arrow-up-and-down {
+    from {
+      top: 500px;
+    }
+    to {
+      top: 550px;
+    }
+  }
+  @keyframes arrow-up-and-down {
+    from {
+      top: 500px;
+    }
+    to {
+      top: 550px;
+    }
   }
   .postits {
     left: -100px;
@@ -3184,9 +3225,6 @@
   }
   .floor {
     height: 405px;
-  }
-  .mdl-button {
-    top: 700px;
   }
   .postits {
     left: -170px;
@@ -3235,7 +3273,6 @@
     height: 200px;
   }
   .mdl-button {
-    top: 550px;
     left: 850px;
   }
   .css-art p {
