--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -127,25 +127,25 @@
 
     .codepen{
         display: flex;
-        flex-wrap: wrap;
         height:80%;
         width: auto;
         margin: 0 30px 0 30px;
-        overflow-y: scroll;
+        overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
-        scroll-snap-type: y mandatory;
+        scroll-snap-type: x mandatory;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
         }
+        &::-webkit-scrollbar:horizontal {
+            height: 10px;
+        }
         &::-webkit-scrollbar-thumb {
             width: 50px;
-            height: 50px;
             border-radius: 40px;
             background-color: rgba(0,0,0,.5);
             box-shadow: 0 0 1px rgba(255,255,255,.5);
             -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
         }
-
         &::-webkit-scrollbar-track {
             box-shadow: inset 0 0 5px grey;
             background: white;
@@ -156,7 +156,8 @@
             overflow: scroll;
             width: 100%;
             height:100%;
-            margin-bottom: 15px;
+            margin-right: 15px;
+            flex: 0 0 100%;
             scroll-snap-align: center;
             &:hover .img-div img{
                 opacity: 0.4;
