--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -133,6 +133,7 @@
         overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
         scroll-snap-type: x mandatory;
+        overscroll-behavior-x: contain;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
         }
