adds / changes styling of .mdl-button

--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -16,7 +16,7 @@
 
     .mdl-button{
         display: block;
-        width: 25%;
+        left: 1000px;
     }
 
     @keyframes arrow-up-and-down {
