--- a/src/STYLES/_min_width_730px.scss
+++ b/src/STYLES/_min_width_730px.scss
@@ -64,6 +64,10 @@
         left: 150px;
     }
 
+    .mdl-button{
+        left: 900px;
+    }
+
     .postits{
         left:-100px;
         top:700px;
