--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -8,8 +8,15 @@
     }
 
     .mdl-button{
-        img{
-            width: 50%;
+        left: 950px;
+    }
+
+    @keyframes arrow-up-and-down {
+        from {
+          top: 455px
+        }
+        to {
+          top: 470px;
         }
     }
 
