--- a/src/STYLES/_min_width_600px.scss
+++ b/src/STYLES/_min_width_600px.scss
@@ -8,6 +8,19 @@
         }
     }
 
+    .mdl-button{
+        display: block;
+    }
+
+    @keyframes arrow-up-and-down {
+        from {
+          top: 495px
+        }
+        to {
+          top: 520px;
+        }
+    }
+
     .postits{
         top: 700px;
         left:-350px;
